# CREDIT-SCORING-MODEL

./: .env.example  .gitignore  AWS_DEPLOYMENT_GUIDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  error_log.txt  future_version.md  pyproject.toml  pyrightconfig.json  requirements.txt  vercel.json
.github/workflows/: ml_ci_cd.yml
docs/: HTTPS_SETUP_GUIDE.md  supabase_schema.sql  turso_migration_plan.txt  turso_schema.sql
models/: model_manifest.json
scripts/: demo_auto_id.py  demo_customer_pipeline.py  demo_turso_setup.py  generate_all_data.py  migrate_supabase_to_turso.py  seed_db.py
src/: __init__.py  requirements.txt
src/api/: __init__.py  app.py  schemas.py
src/api/routes/: __init__.py  admin.py  data.py  scoring.py
src/core/: __init__.py  handler.py  monitoring.py  versioning.py
src/data/: __init__.py  aggregate_transactions.py  feature_pipeline.py  generate_behavior.py  generate_customers.py  generate_raw_transactions.py
src/db/: __init__.py  supabase.py  turso.py
src/scheduler/: __init__.py  retraining.py
src/training/: __init__.py  evaluate.py  train.py
tests/: __init__.py  conftest.py  test_api.py  test_data_generation.py  test_handler.py
