[project]
name = "baaki-credit-scoring-model"
version = "4.0.0"
description = "AI-powered credit scoring system for the Indian market with intelligent model routing."
authors = [
    { name = "BAAKI", email = "info@baaki.example" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.4",
    "slowapi>=0.1.9",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.2",
    "matplotlib>=3.9.0",
    "mlflow>=2.14.1",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "python-dateutil>=2.9.0",
    "apscheduler>=3.10.4",
    "pyyaml>=6.0.1",
    "huggingface-hub>=0.23.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "httpx>=0.27.0",
    "black>=24.4.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
