[project]
name = "baaki-credit-scoring-model"
version = "4.0.0"
description = "AI-powered credit scoring system for the Indian market with intelligent model routing."
authors = [
    { name = "BAAKI", email = "info@baaki.example" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "slowapi",
    "pandas",
    "numpy",
    "scikit-learn",
    "joblib",
    "matplotlib",
    "mlflow",
    "requests",
    "python-dotenv",
    "python-dateutil",
    "apscheduler",
    "pyyaml",
    "huggingface-hub",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "black",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
